--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luisf-franca",
-  "homepage": "https://luisf-franca.github.io/luisffranca/",
+  "homepage": "https://luisf-franca.github.io/luisf-franca/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
